Transformers are Generators
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/helm.yaml
+++ b/examples/helm.yaml
@@ -1,6 +1,6 @@
 pipeline:
 - name: karpenter-values
-  transformer:
+  generator:
     gotemplate:
       vars:
         clusterName: "my-eks-cluster"
