--- a/examples/transformers/add-field.yaml
+++ b/examples/transformers/add-field.yaml
@@ -1,6 +1,6 @@
 pipeline:
 - name: add-field
-  transformer:
+  generator:
     merge:
       input:
         # We expect the input to this transformer to be provided externally,
