Outputs are Generators too
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/exec.yaml
+++ b/examples/exec.yaml
@@ -4,9 +4,10 @@ pipeline:
     exec:
       command: '/bin/bash'
       args: ['-c', 'echo {"foo": {"bar": "asdf hjkl"}}']
+
 # Render the result as YAML
 - name: output
-  output:
+  generator:
     yaml:
       input:
         - ref: simple-exec
