Rename reference literal to inline
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/helm.yaml
+++ b/examples/helm.yaml
@@ -5,7 +5,7 @@ pipeline:
       clusterName: "my-eks-cluster"
       roleARN: "karpenter-role"
     input:
-      literal:
+      inline:
         serviceAccount:
           annotations:
             eks.amazonaws.com/role-arn: "{{ .roleARN }}"
