examples: Use inline map instead of string literal
The code already allows for templating all of the value so we don't need
a string literal here.

Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/transformers/add-field.yaml
+++ b/examples/transformers/add-field.yaml
@@ -9,9 +9,8 @@ pipeline:
       value:
         var: value
     template:
-      # We use a literal because we're defining the key dynamically
-      literal: |
-        {{ .field }}: {{ .value }}
+      inline:
+        "{{ .field }}": "{{ .value }}"
 - name: add-field
   merge:
     input:
