Replace inline and literal fields with more general purpose value field
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/helm-templated-values.yaml
+++ b/examples/helm-templated-values.yaml
@@ -5,7 +5,7 @@ pipeline:
       eks:
         file: files/eks-vars.yaml
     template:
-      inline:
+      value:
         serviceAccount:
           annotations:
             eks.amazonaws.com/role-arn: "{{ .eks.roleARN }}"
