--- a/examples/transformers/add-field.yaml
+++ b/examples/transformers/add-field.yaml
@@ -9,7 +9,7 @@ pipeline:
       value:
         var: value
     template:
-      inline:
+      value:
         "{{ .field }}": "{{ .value }}"
 - name: add-field
   merge:
