helm: Add includeCRDs option
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/helm-templated-values.yfg.yaml
+++ b/examples/helm-templated-values.yfg.yaml
@@ -20,5 +20,6 @@ pipeline:
     version: 1.0.0
     releaseName: karpenter
     namespace: karpenter
+    includeCRDs: true
     values:
       - ref: karpenter-values
