--- a/examples/helm-dynamically-retrieved-values.yfg.yaml
+++ b/examples/helm-dynamically-retrieved-values.yfg.yaml
@@ -34,6 +34,7 @@ pipeline:
     version: 1.0.0
     releaseName: karpenter
     namespace: karpenter
+    includeCRDs: true
     values:
       - ref: karpenter-values
 
