--- a/examples/helm.yfg.yaml
+++ b/examples/helm.yfg.yaml
@@ -5,6 +5,7 @@ pipeline:
     version: 1.0.0
     releaseName: karpenter
     namespace: karpenter
+    includeCRDs: true
     values:
       - value:
           serviceAccount:
