Use Values for importable pipelines
This enables pipelines to be generated by other generators in addition
to being plain files.

Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/reusable-transformer.yfg.yaml
+++ b/examples/reusable-transformer.yfg.yaml
@@ -9,7 +9,8 @@ pipeline:
 # You can import other generators for re-use.
 - name: add-field
   pipeline:
-    path: transformers/add-field.yaml
+    import:
+      file: transformers/add-field.yaml
     vars:
       # We're passing the output of the simple-file stage as the
       # transformer-input var in the add-field transformer
