examples: Move advanced examples to exaples/advanced
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/advanced/helm-templated-values.yfg.yaml
+++ b/examples/advanced/helm-templated-values.yfg.yaml
@@ -3,7 +3,7 @@ pipeline:
   gotemplate:
     refVars:
       eks:
-        file: files/eks-vars.yaml
+        file: ../files/eks-vars.yaml
     template:
       value:
         serviceAccount:
