--- a/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
+++ b/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
@@ -17,7 +17,7 @@ pipeline:
   gotemplate:
     refVars:
       eks:
-        file: files/eks-vars.yaml
+        file: ../files/eks-vars.yaml
     template:
       value:
         serviceAccount:
