examples: Fix helm-dynamically-retrieved-values.yfg.yaml
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
+++ b/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
@@ -42,7 +42,7 @@ pipeline:
   gotemplate:
     refVars:
       eks:
-        file: files/eks-vars.yaml
+        file: ../files/eks-vars.yaml
       amiID:
         ref: extract-ami-id
     template:
