examples: Update CEL
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/cel.yfg.yaml
+++ b/examples/cel.yfg.yaml
@@ -3,6 +3,6 @@ pipeline:
   cel:
     input:
       format: yaml
-      file: files/test.yaml
-    expr: 'val.foo.bar'
+      file: files/service.yaml
+    expr: 'val.spec.selector["app.kubernetes.io/name"]'
 
