examples: Improve single-generator example
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/single-generator.yfg.yaml
+++ b/examples/single-generator.yfg.yaml
@@ -2,8 +2,10 @@
 # Define a top level generator the same way you would in a pipeline, but
 # without a name, and under the generator config key:
 generator:
-  yaml:
-    input:
-      - value:
-          key: value
-          foo: bar
+  name: "example"
+  gotemplate:
+    template:
+      file: files/app-template.yaml
+    vars:
+      version: "v2.0.0"
+      environment: dev
