examples: Improve exec example
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/exec.yfg.yaml
+++ b/examples/exec.yfg.yaml
@@ -1,12 +1,5 @@
 pipeline:
 - name: simple-exec
   exec:
-    command: '/bin/bash'
-    args: ['-c', 'echo {"foo": {"bar": "asdf hjkl"}}']
-
-# Render the result as YAML
-- name: output
-  yaml:
-    input:
-      - ref: simple-exec
-
+    command: 'sed'
+    args: ['-e', 's/listen.*;/listen 443 ssl;/', 'files/nginx.conf']
