--- a/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
+++ b/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
@@ -15,7 +15,7 @@ pipeline:
 
 - name: karpenter-values
   gotemplate:
-    refVars:
+    vars:
       eks:
         file: ../files/eks-vars.yaml
     template:
@@ -40,7 +40,7 @@ pipeline:
 
 - name: karpenter-node-pool
   gotemplate:
-    refVars:
+    vars:
       eks:
         file: ../files/eks-vars.yaml
       amiID:
