gotemplate: Convert template Value option to AnyValue
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
+++ b/examples/advanced/helm-dynamically-retrieved-values.yfg.yaml
@@ -19,14 +19,13 @@ pipeline:
       eks:
         file: ../files/eks-vars.yaml
     template:
-      value:
-        serviceAccount:
-          annotations:
-            eks.amazonaws.com/role-arn: "{{ .eks.roleARN }}"
-        settings:
-          clusterName: "{{ .eks.clusterName }}"
-          clusterEndpoint: "{{ .eks.clusterEndpoint }}"
-          interruptionQueue: "{{ .eks.clusterName }}"
+      serviceAccount:
+        annotations:
+          eks.amazonaws.com/role-arn: "{{ .eks.roleARN }}"
+      settings:
+        clusterName: "{{ .eks.clusterName }}"
+        clusterEndpoint: "{{ .eks.clusterEndpoint }}"
+        interruptionQueue: "{{ .eks.clusterName }}"
 
 - name: helm
   helm:
@@ -45,36 +44,35 @@ pipeline:
         file: ../files/eks-vars.yaml
       amiID:
         ref: extract-ami-id
-    template:
-      value: |
-        apiVersion: karpenter.sh/v1
-        kind: NodePool
-        metadata:
-          name: default
-        spec:
-          template:
-            spec:
-              nodeClassRef:
-                group: karpenter.k8s.aws
-                kind: EC2NodeClass
-                name: default
-        ---
-        apiVersion: karpenter.k8s.aws/v1
-        kind: EC2NodeClass
-        metadata:
-          name: default
-        spec:
-          role: "{{ .eks.nodeClassRole }}"
-          amiSelectorTerms:
-            - id: "{{ .amiID }}"
-          securityGroupSelectorTerms:
-            - tags:
-                karpenter.sh/discovery: "{{ .eks.clusterName }}"
-          subnetSelectorTerms:
-            - tags:
-                karpenter.sh/discovery: "{{ .eks.clusterName }}"
-          tags:
-            managed-by: karpenter
+    template: |
+      apiVersion: karpenter.sh/v1
+      kind: NodePool
+      metadata:
+        name: default
+      spec:
+        template:
+          spec:
+            nodeClassRef:
+              group: karpenter.k8s.aws
+              kind: EC2NodeClass
+              name: default
+      ---
+      apiVersion: karpenter.k8s.aws/v1
+      kind: EC2NodeClass
+      metadata:
+        name: default
+      spec:
+        role: "{{ .eks.nodeClassRole }}"
+        amiSelectorTerms:
+          - id: "{{ .amiID }}"
+        securityGroupSelectorTerms:
+          - tags:
+              karpenter.sh/discovery: "{{ .eks.clusterName }}"
+        subnetSelectorTerms:
+          - tags:
+              karpenter.sh/discovery: "{{ .eks.clusterName }}"
+        tags:
+          managed-by: karpenter
 
 - name: output
   yaml:
