--- a/examples/template-literal.yfg.yaml
+++ b/examples/template-literal.yfg.yaml
@@ -1,15 +1,14 @@
 pipeline:
 - name: template
   gotemplate:
-    template:
-      value: |
-        server {
-            listen {{ .listenAddress }};
-            root {{ .webRoot }};
+    template: |
+      server {
+          listen {{ .listenAddress }};
+          root {{ .webRoot }};
 
-            location / {
-            }
-        }
+          location / {
+          }
+      }
     vars:
       listenAddress: 8080
       webRoot: /var/www/data
