gotemplate: Use StringValue for template parameter
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/examples/transformers/add-annotation.yaml
+++ b/examples/transformers/add-annotation.yaml
@@ -8,7 +8,7 @@ pipeline:
         var: annotation
       annotation_value:
         var: value
-    template:
+    template: |
       metadata:
         annotations:
           "{{ .annotation }}": "{{ .annotation_value }}"
