--- a/examples/advanced/helm-templated-values.yfg.yaml
+++ b/examples/advanced/helm-templated-values.yfg.yaml
@@ -4,6 +4,7 @@ pipeline:
     vars:
       eks:
         file: ../files/eks-vars.yaml
+        format: yaml
     template:
       value:
         serviceAccount:
