--- a/examples/jsonmergepatch.yfg.yaml
+++ b/examples/jsonmergepatch.yfg.yaml
@@ -7,6 +7,7 @@ pipeline:
   json:
     input:
       - ref: service
+        format: yaml
 - name: patch
   jsonpatch:
     patch: |
@@ -22,3 +23,4 @@ pipeline:
   yaml:
     input:
       - ref: patch
+        format: json
