--- a/examples/jsonpatch.yfg.yaml
+++ b/examples/jsonpatch.yfg.yaml
@@ -7,6 +7,7 @@ pipeline:
   json:
     input:
       - ref: service
+        format: yaml
 - name: patch
   jsonpatch:
     patch: |
@@ -19,3 +20,4 @@ pipeline:
   yaml:
     input:
       - ref: patch
+        format: json
