--- a/examples/merge.yfg.yaml
+++ b/examples/merge.yfg.yaml
@@ -1,8 +1,4 @@
 pipeline:
-- name: service
-  file:
-    path: files/service.yaml
-
 - name: k8s-namespace
   yaml:
     input:
@@ -13,5 +9,5 @@ pipeline:
 - name: merged
   merge:
     input:
-      - ref: service
+      - file: files/service.yaml
       - ref: k8s-namespace
